Developer/src/objects/VisualMemo__c.object
<CustomObject>
    <fields>
        <fullName>Day__c</fullName>
        <label>年月日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>詳細</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FormattedDay__c</fullName>
        <formula>TEXT(YEAR( Day__c) ) &amp; &quot;年&quot; &amp;
TEXT(MONTH(Day__c) ) &amp; &quot;月&quot; &amp;
TEXT(DAY(Day__c) ) &amp; &quot;日&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>日付（参照用）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobCategory__c</fullName>
        <label>業種</label>
        <picklist>
            <picklistValues>
                <fullName>業種A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>業種B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>業種C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>業種D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubCategory__c</fullName>
        <label>サブカテゴリ</label>
        <picklist>
            <controllingField>JobCategory__c</controllingField>
            <picklistValues>
                <fullName>りんご農場</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ケーブル</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>とうもろこし畑</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>インターネット</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ラジオ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>テレビ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ワイナリー</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>タイトル</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>べんりなメモ</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>べんりなメモ名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>